--- a/.github/workflows/test_macos_arm64.yml
+++ b/.github/workflows/test_macos_arm64.yml
@@ -97,4 +97,4 @@ jobs:
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
-        pytest --disable-warnings
+        pytest --disable-warnings -k "not FTPLoader" #exclude slow FTP loader -> runs in ubuntu test
