--- a/data/configs/merfish_probe_designer.yaml
+++ b/data/configs/merfish_probe_designer.yaml
@@ -108,7 +108,7 @@ primer_secondary_structures_threshold_deltaG: 0 # threshold for the secondary st
 ### -----------------------------------------------
 # Specificity filter with BlastN
 target_probe_specificity_blastn_search_parameters:
-  perc_identity: 80
+  perc_identity: 80 # the higher the percent identity is, the more significant the match
   strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
   word_size: 10
   dust: "no"
@@ -119,7 +119,7 @@ target_probe_specificity_blastn_hit_parameters:
   min_alignment_length: 17 # can be turned into coverage
 # Crosshybridization filter with BlastN
 target_probe_cross_hybridization_blastn_search_parameters:
-  perc_identity: 80
+  perc_identity: 80 # the higher the percent identity is, the more significant the match
   strand: "minus" # this parameter is fixed
   word_size: 7
   dust: "no"
@@ -158,7 +158,7 @@ target_probe_Tm_salt_correction_parameters: null # if salt correction desired, p
 readout_probe_initial_num_sequences: 100000 # if not enough readout probes can be generated, increase this number
 # Specificity filter with BlastN
 readout_probe_specificity_blastn_search_parameters:
-  perc_identity: 100
+  perc_identity: 100 # the higher the percent identity is, the more significant the match
   strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
   word_size: 7
   dust: "no"
@@ -169,7 +169,7 @@ readout_probe_specificity_blastn_hit_parameters:
   min_alignment_length: 11 # can be turned into coverage
 # Crosshybridization filter with BlastN
 readout_probe_cross_hybridization_blastn_search_parameters:
-  perc_identity: 100
+  perc_identity: 100 # the higher the percent identity is, the more significant the match
   strand: "minus" # this parameter is fixed
   word_size: 7
   dust: "no"
@@ -199,7 +199,7 @@ readout_probe_n_combinations: 100000 # number of random combinations of readout 
 primer_initial_num_sequences: 1000000 # if no primer can be generated, increase this number
 # Specificity filter with BlastN against reference
 primer_specificity_refrence_blastn_search_parameters:
-  perc_identity: 100
+  perc_identity: 100 # the higher the percent identity is, the more significant the match
   strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
   word_size: 7
   dust: "no"
@@ -210,7 +210,7 @@ primer_specificity_refrence_blastn_hit_parameters:
   min_alignment_length: 14 # can be turned into coverage
 # Specificity filter with BlastN against encoding rpobes
 primer_specificity_encoding_probes_blastn_search_parameters:
-  perc_identity: 100
+  perc_identity: 100 # the higher the percent identity is, the more significant the match
   strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
   word_size: 7
   dust: "no"
