ignore pipelines in codecov

--- a/.github/workflows/test_ubuntu_x64.yml
+++ b/.github/workflows/test_ubuntu_x64.yml
@@ -83,7 +83,7 @@ jobs:
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
         coverage run -m pytest --disable-warnings
-        coverage xml -i
+        coverage xml -i --omit="oligo_designer_toolsuite/pipelines"
       env:
         PLATFORM: ${{ matrix.os }}
       
