--- a/.github/workflows/test_ubuntu_x64.yml
+++ b/.github/workflows/test_ubuntu_x64.yml
@@ -74,7 +74,7 @@ jobs:
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install pytest tests/test_oligo_selection.py 
         pip install -e .
         
     - name: Test with pytest
