--- a/.github/workflows/test_ubuntu_x64.yml
+++ b/.github/workflows/test_ubuntu_x64.yml
@@ -74,11 +74,11 @@ jobs:
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
         python -m pip install --upgrade pip
-        pip install 
+        pip install pytest
         pip install -e .
         
     - name: Test with pytest
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
-        pytest --disable-warnings pytest tests/test_oligo_selection.py 
+        pytest --disable-warnings tests/test_oligo_selection.py 
