--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
 packages = ["oligo_designer_toolsuite"]
 
 [tool.setuptools.dynamic]
-#version = {attr = "my_package.VERSION"}
 readme = { file = "README.md" }
 
 [tool.setuptools_scm]
@@ -15,7 +14,6 @@ local_scheme = "no-local-version"
 [project]
 name = "oligo-designer-toolsuite"
 dynamic = ["version"]
-#version = "1.0.2"
 authors = [
   { name = "Lisa Barros de Andrade e Sousa" },
   { name = "Isra Mekki" },
@@ -43,21 +41,22 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 dependencies = [
-  "datetime",
   "argparse",
-  "numpy",
-  "pandas",
-  "scipy",
-  "iteration_utilities",
   "Bio",
-  "pyyaml",
-  "networkx",
-  "joblib",
-  "seqfold",
+  "cyvcf2",
+  "datetime",
   "effidict",
-  "joblib_progress",
-  "oligo-designer-toolsuite-ai-filters",
   "ipywidgets",
+  "iteration_utilities",
+  "joblib",
+  "joblib_progress",
+  "networkx",
+  "numpy",
+  "oligo-designer-toolsuite-ai-filters",
+  "pandas",
+  "pyyaml",
+  "scipy",
+  "seqfold",
 ]
 
 [project.optional-dependencies]
