--- a/.github/workflows/test_ubuntu_x64.yml
+++ b/.github/workflows/test_ubuntu_x64.yml
@@ -82,7 +82,7 @@ jobs:
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
-        coverage run -m pytest --disable-warnings tests/test_oligo_selection.py
+        coverage run -m pytest --disable-warnings tests
         coverage xml -i --omit="oligo_designer_toolsuite/pipelines"
       env:
         PLATFORM: ${{ matrix.os }}
