--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ oligo_seq_probe_designer = "oligo_designer_toolsuite.pipelines._oligo_seq_probe_
 scrinshot_probe_designer = "oligo_designer_toolsuite.pipelines._scrinshot_probe_designer:main"
 seqfish_plus_probe_designer = "oligo_designer_toolsuite.pipelines._seqfish_plus_probe_designer:main"
 merfish_probe_designer = "oligo_designer_toolsuite.pipelines._merfish_probe_designer:main"
+cycle_hcr_probe_designer = "oligo_designer_toolsuite.pipelines._cycle_hcr_probe_designer:main"
 
 [project.urls]
 documentation = "https://oligo-designer-toolsuite.readthedocs.io/"
