--- a/data/configs/cycle_hcr_probe_designer.yaml
+++ b/data/configs/cycle_hcr_probe_designer.yaml
@@ -20,9 +20,9 @@ files_fasta_reference_database_targe_probe: # fasta file with sequences used as 
   - data/genomic_regions/gene_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
   - data/genomic_regions/intron_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
 target_probe_isoform_consensus: 0 #min isoform consesnsus for probes, i.e. how many transcripts of the total number of transcripts of a gene are covered by the probe, given in %
-target_probe_left_probe_sequence_length: 45 # L + spacer + R sequence should equal the total probe length, e.g. 45 + 2 + 45 = 92
+target_probe_L_probe_sequence_length: 45 # L + spacer + R sequence should equal the total probe length, e.g. 45 + 2 + 45 = 92
 target_probe_gap_sequence_length: 2 # gap between L and R probe sequences
-target_probe_right_probe_sequence_length: 45 # L + spacer + R sequence should equal the total probe length, e.g. 45 + 2 + 45 = 92
+target_probe_R_probe_sequence_length: 45 # L + spacer + R sequence should equal the total probe length, e.g. 45 + 2 + 45 = 92
 target_probe_GC_content_min: 30 # minimum GC content of oligos
 target_probe_GC_content_max: 90 # maximum GC content of oligos
 target_probe_Tm_min: 90 # minimum melting temperature of oligos
@@ -34,13 +34,14 @@ target_probe_homopolymeric_base_n: # minimum number of nucleotides to consider i
   G: 6
 target_probe_T_secondary_structure: 76 # Temperature at which the free energy is calculated
 target_probe_secondary_structures_threshold_deltaG: 0 # threshold for the secondary structure free energy -> oligo rejected if it presents a structure with a negative free energy at the defined temperature
-target_probe_Tm_weight: 1 # weight of the Tm of the probe in the efficiency score
-target_probe_isoform_weight: 1 # weight of the Tm of the probe in the efficiency score
-set_size_min: 10 # minimum size of probe sets (in case there exist no set of the optimal size) -> genes with less oligos will be filtered out and stored in regions_with_insufficient_oligos_for_db_probes
-set_size_opt: 25 # optimal size of probe sets
+target_probe_junction_region_size: 13 # size of the seed region around the junction site for blast seed region filter; set to 0 if junction region should not be considered for blast search
+target_probe_Tm_weight: 1 # weight of the Tm of the probe in the efficiency score, where score in abs(Tm_max - Tm_probe)
+target_probe_isoform_weight: 10 # weight of the isoform consensus of the probe in the efficiency score, where score is between 0 and 1
+set_size_min: 2 # minimum size of probe sets (in case there exist no set of the optimal size) -> genes with less oligos will be filtered out and stored in regions_with_insufficient_oligos_for_db_probes
+set_size_opt: 5 # optimal size of probe sets
 distance_between_target_probes: 2 # how much overlap should be allowed between oligos, e.g. if oligos can overlpap x bases choose -x, if oligos can be next to one another choose 0, if oligos should be x bases apart choose x
 n_sets: 100 # maximum number of sets to generate
-
+linker_sequence: TT # linker sequence between readout probe and target sequence
 
 ### Readout Probe Parameters
 ### -----------------------------------------------
@@ -62,14 +63,14 @@ reverse_primer_sequence: CGACACCGAACGTGCGACAA # defaults to oligo sequence, chan
 # Specificity filter with BlastN
 target_probe_specificity_blastn_search_parameters:
   perc_identity: 80
-  strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
+  strand: "plus" # this parameter is fixed, if reference is whole genome, consider using "both"
   word_size: 10
   dust: "no"
   soft_masking: "false"
   max_target_seqs: 10
   max_hsps: 1000
 target_probe_specificity_blastn_hit_parameters:
-  min_alignment_length: 17 # can be turned into coverage
+  coverage: 50 # can be turned into min_alignment_length
 # Crosshybridization filter with BlastN
 target_probe_cross_hybridization_blastn_search_parameters:
   perc_identity: 80
@@ -79,7 +80,7 @@ target_probe_cross_hybridization_blastn_search_parameters:
   soft_masking: "false"
   max_target_seqs: 10
 target_probe_cross_hybridization_blastn_hit_parameters:
-  min_alignment_length: 17 # can be turned into coverage
+  coverage: 50 # can be turned into min_alignment_length
 # Parameters for the Oligo set selection
 max_graph_size: 5000 # maximum number of oligos that are taken into consisderation in the last step (5000 -> ~5GB, 2500 -> ~1GB)
 n_attempts: 100000 # number of attempts to find the optimal set of oligos
@@ -105,9 +106,11 @@ target_probe_Tm_chem_correction_parameters: null # if chem correction desired, p
 target_probe_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
 
 
-
 ### Readout Probe Parameters
 ### -----------------------------------------------
+
+
+
 
 ### Primer Parameters
 ### -----------------------------------------------
