--- a/data/configs/cycle_hcr_probe_designer.yaml
+++ b/data/configs/cycle_hcr_probe_designer.yaml
@@ -33,23 +33,19 @@ target_probe_homopolymeric_base_n: # minimum number of nucleotides to consider i
   C: 6
   G: 6
 target_probe_T_secondary_structure: 76 # Temperature at which the free energy is calculated
-target_probe_secondary_structures_threshold_deltaG: 0 # threshold for the secondary structure free energy -> oligo rejected if it presents a structure with a negative free energy at the defined temperature
 target_probe_junction_region_size: 13 # size of the seed region around the junction site for blast seed region filter; set to 0 if junction region should not be considered for blast search
 target_probe_Tm_weight: 1 # weight of the Tm of the probe in the efficiency score, where score in abs(Tm_max - Tm_probe)
 target_probe_isoform_weight: 10 # weight of the isoform consensus of the probe in the efficiency score, where score is between 0 and 1
-set_size_min: 10 # minimum size of probe sets (in case there exist no set of the optimal size) -> genes with less oligos will be filtered out and stored in regions_with_insufficient_oligos_for_db_probes
-set_size_opt: 25 # optimal size of probe sets
+set_size_min: 2 # minimum size of probe sets (in case there exist no set of the optimal size) -> genes with less oligos will be filtered out and stored in regions_with_insufficient_oligos_for_db_probes
+set_size_opt: 5 # optimal size of probe sets
 distance_between_target_probes: 2 # how much overlap should be allowed between oligos, e.g. if oligos can overlpap x bases choose -x, if oligos can be next to one another choose 0, if oligos should be x bases apart choose x
 n_sets: 30 # maximum number of sets to generate
 linker_sequence: TT # linker sequence between readout probe and target sequence
 
 ### Readout Probe Parameters
 ### -----------------------------------------------
-readout_probe_sequences:
-  488: "data/predefined_sequences/cycleHCR/readout_probes/LR_seqs_488.csv"
-  546: "data/predefined_sequences/cycleHCR/readout_probes/LR_seqs_546.csv"
-  647: "data/predefined_sequences/cycleHCR/readout_probes/LR_seqs_647.csv"
-
+file_readout_probe_table: data/predefined_sequences/cycle_hcr_readout_probes.tsv # csv/tsv file containing the readout probe table with the columns "bit", "channel", "readout_probe_id", "readout_probe__sequence", "L/R"
+file_codebook: # file containing the codebook, where columns = "bits" and rows = "region_id" and the entries represent the bit encoding in 0/1 for the bits used for each region
 
 ### Primer Parameters
 ### -----------------------------------------------
@@ -62,6 +58,25 @@ reverse_primer_sequence: CGACACCGAACGTGCGACAA # defaults to oligo sequence, chan
 
 ### Target Probe Parameters
 ### -----------------------------------------------
+# Parameters for property filters
+# The melting temperature is used in 2 different stages (property filters and padlock detection probe design), where a few parameters are shared and the others differ.
+# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
+target_probe_Tm_parameters:
+  nn_table: DNA_NN3 # default
+  tmm_table: DNA_TMM1 # default
+  imm_table: DNA_IMM1 # default
+  de_table: DNA_DE1 # default
+  dnac1: 25 #[nM] 
+  dnac2: 25 #[nM] 
+  saltcorr: 0 # 
+  Na: 50 #[mM] 
+  K: 0 #[mM] default
+  Tris: 0 #[mM] default
+  Mg: 0 #[mM] default
+  dNTPs: 0 #[mM] default
+target_probe_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
+target_probe_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
+target_probe_secondary_structures_threshold_deltaG: 0 # threshold for the secondary structure free energy -> oligo rejected if it presents a structure with a negative free energy at the defined temperature
 # Specificity filter with BlastN
 target_probe_specificity_blastn_search_parameters:
   perc_identity: 80
@@ -88,24 +103,6 @@ max_graph_size: 5000 # maximum number of oligos that are taken into consisderati
 n_attempts: 100000 # number of attempts to find the optimal set of oligos
 heuristic: true # apply heuristic pre-search to reduce search space and runtime of oligo set selection
 heuristic_n_attempts: 100 # number of attempts to find the optimal set of oligos for heuristic pre-search
-# Parameters for Melting Temperature
-# The melting temperature is used in 2 different stages (property filters and padlock detection probe design), where a few parameters are shared and the others differ.
-# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
-target_probe_Tm_parameters:
-  nn_table: DNA_NN3 # default
-  tmm_table: DNA_TMM1 # default
-  imm_table: DNA_IMM1 # default
-  de_table: DNA_DE1 # default
-  dnac1: 25 #[nM] 
-  dnac2: 25 #[nM] 
-  saltcorr: 0 # 
-  Na: 50 #[mM] 
-  K: 0 #[mM] default
-  Tris: 0 #[mM] default
-  Mg: 0 #[mM] default
-  dNTPs: 0 #[mM] default
-target_probe_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
-target_probe_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
 
 
 ### Readout Probe Parameters
