--- a/data/configs/merfish_probe_designer.yaml
+++ b/data/configs/merfish_probe_designer.yaml
@@ -34,7 +34,6 @@ target_probe_homopolymeric_base_n: # minimum number of nucleotides to consider i
   C: 6
   G: 6
 target_probe_T_secondary_structure: 76 # Temperature at which the free energy is calculated
-target_probe_secondary_structures_threshold_deltaG: 0 # threshold for the secondary structure free energy -> oligo rejected if it presents a structure with a negative free energy at the defined temperature
 target_probe_GC_weight: 1 # weight of the GC content of the probe in the efficiency score
 target_probe_Tm_weight: 1 # weight of the Tm of the probe in the efficiency score
 target_probe_isoform_weight: 2 # weight of the Tm of the probe in the efficiency score
@@ -106,6 +105,25 @@ primer_secondary_structures_threshold_deltaG: 0 # threshold for the secondary st
 
 ### Target Probe Parameters
 ### -----------------------------------------------
+# Parameters for property filters
+# The melting temperature is used in 2 different stages (property filters and padlock detection probe design), where a few parameters are shared and the others differ.
+# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
+target_probe_Tm_parameters:
+  nn_table: DNA_NN4 # SantaLucia (2004) taken from Moffitt (2016)
+  tmm_table: DNA_TMM1 #default
+  imm_table: DNA_IMM1 #default
+  de_table: DNA_DE1 #default
+  dnac1: 5 #[nM] taken from Moffitt (2016)
+  dnac2: 0 #[nM] taken from Moffitt (2016)
+  saltcorr: 5 # correction for deltaS, taken from https://github.com/ZhuangLab/MERFISH_analysis
+  Na: 300 #[mM] 0.3M, taken from https://github.com/ZhuangLab/MERFISH_analysis
+  K: 0 #[mM] default
+  Tris: 0 #[mM] default
+  Mg: 0 #[mM] default
+  dNTPs: 0 #[mM] default
+target_probe_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
+target_probe_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
+target_probe_secondary_structures_threshold_deltaG: 0 # threshold for the secondary structure free energy -> oligo rejected if it presents a structure with a negative free energy at the defined temperature
 # Specificity filter with BlastN
 target_probe_specificity_blastn_search_parameters:
   perc_identity: 80
@@ -127,35 +145,32 @@ target_probe_cross_hybridization_blastn_search_parameters:
   max_target_seqs: 10
 target_probe_cross_hybridization_blastn_hit_parameters:
   min_alignment_length: 17 # can be turned into coverage
-# Parameters for the Oligo set selection
+# Parameters for the oligo set selection
 max_graph_size: 5000 # maximum number of oligos that are taken into consisderation in the last step (5000 -> ~5GB, 2500 -> ~1GB)
 n_attempts: 100000 # number of attempts to find the optimal set of oligos
 heuristic: true # apply heuristic pre-search to reduce search space and runtime of oligo set selection
 heuristic_n_attempts: 100 # number of attempts to find the optimal set of oligos for heuristic pre-search
-# Parameters for Melting Temperature
-# The melting temperature is used in 2 different stages (property filters and padlock detection probe design), where a few parameters are shared and the others differ.
-# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
-target_probe_Tm_parameters:
+
+
+### Readout Probe Parameters
+### -----------------------------------------------
+readout_probe_initial_num_sequences: 100000 # if not enough readout probes can be generated, increase this number
+# Parameters for property filters
+readout_probe_Tm_parameters:
   nn_table: DNA_NN4 #S antaLucia (2004) taken from Moffitt (2016)
   tmm_table: DNA_TMM1 #default
   imm_table: DNA_IMM1 #default
   de_table: DNA_DE1 #default
-  dnac1: 5 #[nM] taken from Moffitt (2016)
-  dnac2: 0 #[nM] taken from Moffitt (2016)
+  dnac1: 25 #default
+  dnac2: 25 #default
   saltcorr: 5 # correction for deltaS, taken from https://github.com/ZhuangLab/MERFISH_analysis
   Na: 300 #[mM] 0.3M, taken from https://github.com/ZhuangLab/MERFISH_analysis
   K: 0 #[mM] default
   Tris: 0 #[mM] default
   Mg: 0 #[mM] default
   dNTPs: 0 #[mM] default
-target_probe_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
-target_probe_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
-
-
-
-### Readout Probe Parameters
-### -----------------------------------------------
-readout_probe_initial_num_sequences: 100000 # if not enough readout probes can be generated, increase this number
+readout_probe_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
+readout_probe_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
 # Specificity filter with BlastN
 readout_probe_specificity_blastn_search_parameters:
   perc_identity: 100
@@ -177,26 +192,30 @@ readout_probe_cross_hybridization_blastn_search_parameters:
   max_target_seqs: 10
 readout_probe_cross_hybridization_blastn_hit_parameters:
   min_alignment_length: 11 # can be turned into coverage
-readout_probe_Tm_parameters:
+# Parameters for the oligo set selection
+readout_probe_n_combinations: 100000 # number of random combinations of readout probe sets to iteratte through
+
+### Primer Parameters
+### -----------------------------------------------
+primer_initial_num_sequences: 1000000 # if no primer can be generated, increase this number
+# Parameters for property filters
+# The melting temperature is used in 2 different stages (property filters and padlock detection probe design), where a few parameters are shared and the others differ.
+# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
+primer_Tm_parameters:
   nn_table: DNA_NN4 #S antaLucia (2004) taken from Moffitt (2016)
   tmm_table: DNA_TMM1 #default
   imm_table: DNA_IMM1 #default
   de_table: DNA_DE1 #default
-  dnac1: 25 #default
-  dnac2: 25 #default
+  dnac1: 250 #[nM] taken from https://github.com/ZhuangLab/MERFISH_analysis
+  dnac2: 250 #[nM] taken from https://github.com/ZhuangLab/MERFISH_analysis
   saltcorr: 5 # correction for deltaS, taken from https://github.com/ZhuangLab/MERFISH_analysis
   Na: 300 #[mM] 0.3M, taken from https://github.com/ZhuangLab/MERFISH_analysis
   K: 0 #[mM] default
   Tris: 0 #[mM] default
   Mg: 0 #[mM] default
   dNTPs: 0 #[mM] default
-readout_probe_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
-readout_probe_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
-readout_probe_n_combinations: 100000 # number of random combinations of readout probe sets to iteratte through
-
-### Primer Parameters
-### -----------------------------------------------
-primer_initial_num_sequences: 1000000 # if no primer can be generated, increase this number
+primer_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
+primer_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
 # Specificity filter with BlastN against reference
 primer_specificity_refrence_blastn_search_parameters:
   perc_identity: 100
@@ -219,21 +238,3 @@ primer_specificity_encoding_probes_blastn_search_parameters:
   max_hsps: 1000
 primer_specificity_encoding_probes_blastn_hit_parameters:
   min_alignment_length: 11 # can be turned into coverage
-# Parameters for Melting Temperature
-# The melting temperature is used in 2 different stages (property filters and padlock detection probe design), where a few parameters are shared and the others differ.
-# parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
-primer_Tm_parameters:
-  nn_table: DNA_NN4 #S antaLucia (2004) taken from Moffitt (2016)
-  tmm_table: DNA_TMM1 #default
-  imm_table: DNA_IMM1 #default
-  de_table: DNA_DE1 #default
-  dnac1: 250 #[nM] taken from https://github.com/ZhuangLab/MERFISH_analysis
-  dnac2: 250 #[nM] taken from https://github.com/ZhuangLab/MERFISH_analysis
-  saltcorr: 5 # correction for deltaS, taken from https://github.com/ZhuangLab/MERFISH_analysis
-  Na: 300 #[mM] 0.3M, taken from https://github.com/ZhuangLab/MERFISH_analysis
-  K: 0 #[mM] default
-  Tris: 0 #[mM] default
-  Mg: 0 #[mM] default
-  dNTPs: 0 #[mM] default
-primer_Tm_chem_correction_parameters: null # if chem correction desired, please add parameters below
-primer_Tm_salt_correction_parameters: null # if salt correction desired, please add parameters below
